# onion-builder.

./: .gitignore  README.md  notes.md
.github/workflows/: classroom.yml
output/: output.txt
submissions/: run.sh
submissions/python/: main.py  requirements.txt
submissions/rust/: Cargo.toml
test/: input.json  onion_check.sh  output.txt
